5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1667_2967.log
== TEST (2019-04-16 16:22:16) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura 1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 3
    if (altura 1 >= 1.37):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:21) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura 1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 3
    if (altura 1 >= 1.37):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:22:23) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura 1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- EXECUTION TIME:
0.162514
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 3
    if (altura 1 >= 1.37):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:23) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura 1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 3
    if (altura 1 >= 1.37):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:46) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:02) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- EXECUTION TIME:
0.151007
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:10) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:22) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37
	 altura2 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 4
    altura2 >= 1.37):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:23) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37
	 altura2 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 4
    altura2 >= 1.37):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:25:33) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37
	 altura2 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- EXECUTION TIME:
0.125484
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 4
    altura2 >= 1.37):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:25:33) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37
	 altura2 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- ERROR:
File "XXXX", line 4
    altura2 >= 1.37):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:00) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:16) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print(altura1)
	print('Sim')
else:
	print(altura2)
	print('Nao')
	
-- OUTPUT:
1.26
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:30) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print(altura1)
	print('Sim')
else:
	print(altura2)
	print('Nao')
	
-- EXECUTION TIME:
0.169678
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
1.26
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
1.53
Nao
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
1.85
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:41) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print(altura1)
	print('Sim')
else:
	print(altura2)
	print('Nao')
	
-- OUTPUT:
1.26
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:15) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	(altura1 >= altura2):
	print('Sim')
else:
	
	print('Nao')
	
-- EXECUTION TIME:
0.222069
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 4
    (altura1 >= altura2):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:15) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	(altura1 >= altura2):
	print('Sim')
else:
	
	print('Nao')
	
-- ERROR:
File "XXXX", line 4
    (altura1 >= altura2):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:18) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	(altura1 >= altura2):
	print('Sim')
else:
	print('Nao')
	
-- ERROR:
File "XXXX", line 4
    (altura1 >= altura2):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:29:27) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
	
-- EXECUTION TIME:
0.150641
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:29:27) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	print('Sim')
else:
	print('Nao')
	
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:35:36) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	(altura1 >= altura2):
	print('Sim')
else:
	print(altura2)
	print('Nao')
	
-- EXECUTION TIME:
0.13564
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 4
    (altura1 >= altura2):
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:36) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	(altura1 >= altura2):
	print('Sim')
else:
	print(altura2)
	print('Nao')
	
-- ERROR:
File "XXXX", line 4
    (altura1 >= altura2):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:35:57) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')
	
-- OUTPUT:
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:37:49) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')
if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:01) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')
if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.182182
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:09) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')
if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:22) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')
if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.196648
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:38:45) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:38:55) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.191247
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:39:06) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:39:37) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 >= 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.153865
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:23) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:33) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.136168
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:34) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:40:35) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.169936
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:36) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:40:56) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:02) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:41:14) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.157357
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:41:56) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:12) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.208206
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:42:13) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.161432
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:42:13) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:18) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.180596
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:43:21) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- EXECUTION TIME:
0.152488
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Nao
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:43:21) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')

if (altura1 > altura2):
	print(altura1)
else:
	print(altura2)
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:45:24) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) , metros
else:
	print(altura2) , metros
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(altura2) , metros
NameError: name 'metros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:21) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:22) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:23) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:46:24) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:47:48) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 e altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- ERROR:
File "XXXX", line 3
    if (altura1 e altura2 > 1.37):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:12) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 ou altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- ERROR:
File "XXXX", line 3
    if (altura1 ou altura2 > 1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:13) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 ou altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- EXECUTION TIME:
0.11765
-- ERROR:
  File "/home/codebench/codes/1667/2967/main.py", line 3
    if (altura1 ou altura2 > 1.37):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:14) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 ou altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- ERROR:
File "XXXX", line 3
    if (altura1 ou altura2 > 1.37):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:48:21) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 and altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:48:35) 
-- CODE:
altura1 = float(input("altura1:"))
altura2 = float(input("altura2:"))
if (altura1 and altura2 > 1.37):
	
	print('Sim')
else:
	print('Nao')
#altura do mais alto
if (altura1 > altura2):
	print(altura1) 
else:
	print(altura2) 
-- EXECUTION TIME:
0.207245
-- TEST CASE 1:
---- input:
1.25
1.26
---- correct output:
Nao
1.26
---- user output:
Nao
1.26
-- TEST CASE 2:
---- input:
1.20
1.53
---- correct output:
Sim
1.53
---- user output:
Sim
1.53
-- TEST CASE 3:
---- input:
1.85
1.9
---- correct output:
Sim
1.9
---- user output:
Sim
1.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
